working on layout issues

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 .img1 {
     vertical-align: baseline;
     position: absolute;
+    width: 70%;
+    height: 100%;
     clip-path: polygon(0 0, 100% 0, 100% 72%, 51% 100%, 0 72%);
     z-index: -1;
 }
@@ -8,8 +10,10 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 60%;
+    height: 90%;
     position: absolute;
+    top: 10%;
     clip-path: polygon(0 0, 100% 0, 100% 72%, 51% 100%, 0 72%);
     z-index: 0;
 }
@@ -17,17 +21,16 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 100%;
     position: absolute;
     top: 15%;
     bottom: 85%;
     z-index: 1;
 }
-#badge {
-    position: absolute;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif
-}
 p {
     text-align: center;
+    color: #5dbeea;
+    position: absolute;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
